# unr_deepspeech

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
src/: deepspeech_node.py  unr_deepspeech_client.py  unr_deepspeech_server.py
srv/: Listen.srv
