<?xml version="1.0"?>
<package format="2">
  <name>unr_deepspeech</name>
  <version>0.0.1</version>
  <description>The unr_deepspeech package</description>

  <maintainer email="richard.kelley@gmail.com">Richard Kelley</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/unr_deepspeech</url> -->

  <author email="bryson@todo.todo">Bryson Lingenfelter</author>
  <author email="nate@todo.todo">Nate Thom</author>
  <author email="sybille@todo.todo">Sybille Horcholle</author>
  <author email="richard.kelley@gmail.com">Richard Kelley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
